appdir = $(pythondir)/olc/

app_PYTHON = \
	application.py \
	ascii.py \
	channel_time.py \
	crossfade.py \
	cue.py \
	define.py \
	dmx.py \
	group.py \
	master.py \
	midi.py \
	osc.py \
	patch_channels.py \
	patch_outputs.py \
	sequence.py \
	settings.py \
	track_channels.py \
	virtual_console.py \
	widgets_button.py \
	widgets_channel.py \
	widgets_go.py \
	widgets_group.py \
	widgets_patch_channels.py \
	widgets_patch_outputs.py \
	widgets_sequential.py \
	widgets_track_channels.py \
	window.py
