appdir = $(pythondir)/olc/

app_PYTHON = \
	application.py \
	ascii.py \
	ascii_save.py \
	channel_time.py \
	crossfade.py \
	cue.py \
	cues_edition.py \
	define.py \
	dmx.py \
	enttec_wing.py \
	group.py \
	master.py \
	masters_edition.py \
	midi.py \
	ola_thread.py \
	osc.py \
	patch_channels.py \
	patch_outputs.py \
	sequence.py \
	sequence_edition.py \
	settings.py \
	step.py \
	track_channels.py \
	virtual_console.py \
	widgets.py \
	widgets_button.py \
	widgets_channel.py \
	widgets_fader.py \
	widgets_flash.py \
	widgets_go.py \
	widgets_grand_master.py \
	widgets_group.py \
	widgets_patch_channels.py \
	widgets_patch_outputs.py \
	widgets_sequential.py \
	widgets_track_channels.py \
	window.py
