configure_file(
  input: 'olcd.in',
  output: 'olcd',
  configuration: conf,
  install: true,
  install_dir: get_option('bindir')
)

configure_file(
  input: 'olc-monitor.in',
  output: 'olc-monitor',
  configuration: conf,
  install: true,
  install_dir: get_option('bindir')
)

configure_file(
  input: 'olc-bench.in',
  output: 'olc-bench',
  configuration: conf,
  install: true,
  install_dir: get_option('bindir')
)

configure_file(
  input: 'sacn-monitor.in',
  output: 'sacn-monitor',
  configuration: conf,
  install: true,
  install_dir: get_option('bindir')
)
